--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # sbt specific
 .cache
+.cache-main
 .history
 .lib/
 dist/*
@@ -11,6 +12,13 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+
+tmp
+.settings
+.project
+.classpath
+.idea
+*.iml
 
 # Scala-IDE specific
 .scala_dependencies
